Created #navbar, Client's Register Routes and Views

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
     <title>Clients Register</title>
 </head>
 <body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="/">Dashboard</a></li>
+            <li><a href="/clients/create">New Client</a></li>
+        </ul>
+    </nav>
     {{{ body }}}
 </body>
 </html>
