Created Controllers and prepared Routes and Views to use them.

--- a/views/clients/create.handlebars
+++ b/views/clients/create.handlebars
@@ -1,6 +1,6 @@
 <h1>Register new Client</h1>
 
-<form action="/clients/create" method="post">
+<form action="/clients/insert" method="post">
 
     <div class="form-control">
         <label for="name">Client Name:</label>
