Created Home Controller, route and view. Created clients list route, view and controller.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <nav id="navbar">
         <ul>
             <li><a href="/">Dashboard</a></li>
+            <li><a href="/clients/list">Clients List</a></li>
             <li><a href="/clients/create">New Client</a></li>
         </ul>
     </nav>
