--- a/views/clients/list.handlebars
+++ b/views/clients/list.handlebars
@@ -7,6 +7,7 @@
             <th>Name</th>
             <th>Age</th>
             <th>Ocuppation</th>
+            <th></th>
         </tr>
     </thead>
 
@@ -16,6 +17,12 @@
             <td>{{this.name}}</td>
             <td>{{this.age}}</td>
             <td>{{this.occupation}}</td>
+            <td>
+                <form action="/clients/delete" method="post">
+                    <input type="hidden" name="id" value="{{this._id}}">
+                    <input type="submit" value="Remove Permanently">
+                </form>
+            </td>
         </tr>
         {{/each}}
     </tbody>
