--- a/views/clients/list.handlebars
+++ b/views/clients/list.handlebars
@@ -22,6 +22,10 @@
                     <input type="hidden" name="id" value="{{this._id}}">
                     <input type="submit" value="Remove Permanently">
                 </form>
+                <form action="/clients/edit" method="post">
+                    <input type="hidden" name="id" value="{{this._id}}">
+                    <input type="submit" value="Edit">
+                </form>
             </td>
         </tr>
         {{/each}}
