--- a/views/clients/list.handlebars
+++ b/views/clients/list.handlebars
@@ -20,11 +20,11 @@
             <td>
                 <form action="/clients/delete" method="post">
                     <input type="hidden" name="id" value="{{this._id}}">
-                    <input type="submit" value="Remove Permanently">
+                    <input type="submit" value="Remove" class="btn">
                 </form>
                 <form action="/clients/edit" method="post">
                     <input type="hidden" name="id" value="{{this._id}}">
-                    <input type="submit" value="Edit">
+                    <input type="submit" value="Edit" class="btn">
                 </form>
             </td>
         </tr>
