--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clients Register</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <nav id="navbar">
-        <ul>
-            <li><a href="/">Dashboard</a></li>
-            <li><a href="/clients/list">Clients List</a></li>
-            <li><a href="/clients/create">New Client</a></li>
-        </ul>
-    </nav>
-    {{{ body }}}
+    <div class="container">
+
+        <nav id="navbar">
+            <ul>
+                <li><a href="/">Dashboard</a></li>
+                <li><a href="/clients/list">Clients List</a></li>
+                <li><a href="/clients/create">New Client</a></li>
+            </ul>
+        </nav>
+        {{{ body }}}
+
+    </div>
 </body>
 </html>
